@startuml
class MainActivity {
  - ActivityDatabase database
  - MeasurementAdapter adapter
  + onCreate(Bundle)
  - refreshList()
  - openDetail(ActivityRecord)
}

class TrackingActivity {
  - ActivityDatabase database
  - SensorManager sensorManager
  - LocationManager locationManager
  - NotificationManager notificationManager
  - long activeMeasurementId
  + onCreate(Bundle)
  - startMeasurement()
  - stopMeasurementAndFinish()
  - storeSample()
  - onLocationChanged(Location)
  - showOrUpdateNotification()
}

class MeasurementDetailActivity {
  - ActivityRecord record
  - List<ActivitySample> samples
  + onCreate(Bundle)
  - shareCsv()
}

class MeasurementAdapter {
  - List<ActivityRecord> records
  + setRecords(List<ActivityRecord>)
}

class ActivityDatabase {
  + startMeasurement(long): long
  + insertSample(long, long, int, double, double, double, double, double, double)
  + finishMeasurement(long, long)
  + deleteMeasurement(long)
  + listMeasurements(): List<ActivityRecord>
  + getMeasurement(long): ActivityRecord
  + listSamples(long): List<ActivitySample>
}

class ActivityRecord {
  + long id
  + long startedAt
  + long endedAt
  + int totalSteps
  + double distanceMeters
  + double averageIntensity
}

class ActivitySample {
  + long measuredAt
  + int steps
  + double intensity
  + double latitude
  + double longitude
  + double distanceMeters
  + double speedKmh
  + double paceSecondsPerKm
}

class ActivityStatsCalculator {
  + summarize(long, long, List<ActivitySample>): ActivityStats
  + formatDuration(long): String
  + intensityLabel(double): String
}

class IntensityGraphView {
  + setSamples(List<ActivitySample>)
}

MainActivity --> MeasurementAdapter
MainActivity --> TrackingActivity
MainActivity --> ActivityDatabase
MeasurementAdapter --> ActivityRecord
TrackingActivity --> ActivityDatabase
MeasurementDetailActivity --> ActivityDatabase
MeasurementDetailActivity --> IntensityGraphView
ActivityDatabase --> ActivityRecord
ActivityDatabase --> ActivitySample
ActivityStatsCalculator --> ActivitySample
@enduml
